# imap-filter-rs-v2

./: .otto.yml  Cargo.toml  README.md  README.md.backup  imap-filter.yml
docs/: design.md  gmail-imap-extensions.md  how-to-execute-a-plan.md  testing-harness-design.md
examples/: batch_labels_test.rs  thread_proof.py  thread_proof.rs  thread_test.rs
src/: cli.rs  client_ops.rs  imap_filter.rs  lib.rs  main.rs  message.rs  oauth2.rs  thread.rs  utils.rs
src/cfg/: config.rs  label.rs  message_filter.rs  mod.rs  secure.rs  state_filter.rs
tests/: integration.rs
tests/fixtures/configs/: basic-filters.yml  state-transitions.yml  thread-protection.yml
tests/fixtures/emails/simple/: direct-message.eml  important-from-boss.eml  mailing-list.eml  newsletter.eml  with-cc.eml
tests/fixtures/emails/threads/thread-01/: 01-initial.eml  02-reply.eml  03-follow-up.eml
tests/fixtures/scenarios/purgatory-flow/: manifest.yaml  regular-email.eml
tests/harness/: fixtures.rs  mock_client.rs  mod.rs  test_harness.rs  virtual_clock.rs  virtual_mailbox.rs
