[package]
name = "imap-filter"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
addr = "0.15.6"
base64 = "0.22"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive", "env"] }
dirs = "6.0.0"
env_logger = "0.11.8"
eyre = "0.6.12"
globset = "0.4.16"
imap = "2.4.1"
imap-proto = "0.16.5"
log = "0.4.27"
mailparse = "0.16.1"
native-tls = "0.2.14"
regex = "1.11.1"
secure-string = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_plain = "1.0.2"
serde_yaml = "0.9.34"
ureq = { version = "2.10", features = ["json"] }

[dev-dependencies]
tempfile = "3.20.0"
